[tool.poetry]
name = "cloud-build-webhook"
version = "0.1.0"
description = ""
authors = ["titled-jam-team"]
packages = [
    { include = "cloud-build-webhook", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"
iso8601 = "^1.0.2"
fastapi = "^0.79.0"
pydantic = "^1.9.1"
hypercorn = "^0.13.2"
uvloop = "^0.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
